--- a/generator/Cargo.toml
+++ b/generator/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fastrand = "1.8.0"
 heck = "0.4.0"
 intern-str = { path = "../../intern-str", features = ["builder"] }
 intern-str-codegen = { path = "../../intern-str/codegen" }
