--- a/generator/Cargo.toml
+++ b/generator/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 [dependencies]
 fastrand = "1.8.0"
 heck = "0.4.0"
-intern-str = { path = "../../intern-str", features = ["builder"] }
+intern-str = { version = "0.1", features = ["builder"] }
 intern-str-codegen = { path = "../../intern-str/codegen" }
 memchr = "2.5.0"
