--- a/generator/Cargo.toml
+++ b/generator/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 fastrand = "1.8.0"
 heck = "0.4.0"
 intern-str = { version = "0.1", features = ["builder"] }
-intern-str-codegen = { path = "../../intern-str/codegen" }
+intern-str-codegen = { version = "0.1" }
 memchr = "2.5.0"
