--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 authors = ["John Nunley <jtnunley01@gmail.com>"]
 description = "A no_std MIME type library for Rust"
 repository = "https://github.com/notgull/mr-mime"
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["mime", "networking"]
 homepage = "https://github.com/notgull/mr-mime#readme"
 documentation = "https://docs.rs/mr-mime"
