Try to fix the algorithm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ documentation = "https://docs.rs/mr-mime"
 
 [dependencies]
 intern-str = { version = "0.1", default-features = true }
+memchr = { version = "2.5.0", default-features = false }
 
 [workspace]
 members = ["generator"]
@@ -20,6 +21,3 @@ members = ["generator"]
 default = ["std"]
 alloc = []
 std = ["alloc"]
-
-[build-dependencies]
-autocfg = "1.1.0"
